@@ -1,8 +1,9 @@
 Performance improvements to paste/paste0.
 
 Speed up by changing .Internal interface, avoiding list(...), and
-internally by having an array of string vectors rather than a pairlist,
-plus not concatenating single things, and avoiding a big buffer for
-collapse.
+internally by having an array of string vectors rather than a
+pairlist, plus not concatenating single things, and avoiding a big
+buffer for collapse.
 
-Created Rf_mkCharMulti to support paste; may have other uses.
+Created Rf_mkCharMulti to support paste.  Also used it to speed up
+substr and substr<- a bit.
